[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uni"
version = "0.1.0"
authors = [
	{name="Yoda", email="im.yod4@gmail.com"}
]
description = ""
readme = "README.md"
require-python = ">3.1"
classifires = [
	"Programming Language :: Python :: 3",
	"Licence :: OSI Approved :: MIT Licence",
	"Operating System :: OS Independent",
]

[project.urls]
"HomePage" = "https://github.com/ImYod4/uni"

